# sema

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/sema/: actions.h  client.h  log.h  protocol.h  sema.h  state.h  types.h
src/: client.cpp  protocol.cpp  sema.cpp  service.cpp  template.cpp
test/: CMakeLists.txt  sema_TEST.cpp
